CHANGES IN VERSION 1.1.8
------------------------
 o bug fixed when peak overlap with feature <2014-06-11, Wed>

CHANGES IN VERSION 1.1.7
------------------------
 o bug fixed in calculating distanceToTSS <2014-06-03, Tue>

CHANGES IN VERSION 1.1.6
------------------------
 o add chainFile parameter in enrichAnnoOverlap and enrichPeakOverlap to support different genome version comparision <2014-06-01, Sun>
 o fixed color bug in peakHeatmap.internal2 and plotAnnoBar <2014-06-02, Mon>
 o update vignettes <2014-06-02, Mon>

CHANGES IN VERSION 1.1.5
------------------------
 o export getPromoters and getTagMatrix <2014-05-31, Sat>
 o rename plotAvgProf to plotAvgProf2 and implement plotAvgProf based on tagMatrix  <2014-05-31, Sat>
 o implement tagHeatmap for visualize heatmap of the tagMatrix or a list of tagMatrix <2014-05-31, Sat>
 o implement shuffle function to generate a random ChIP data based on a real one <2014-05-31, Sat>
 o implement enrichPeakOverlap to calcuate significant of ChIP experiments based on the genome coordinations <2014-05-31, Sat>
 o implement enrichAnnoOverlap to calculate significant of ChIP experiments based on their nearest gene annotation <2014-05-31, Sat>
 o incorporate GEO database for mining significant overlap of ChIP data <2014-05-31, Sat>
   + getGEOspecies summarize the collected data by species
   + getGEOgenomeVersion summarize the colleted data by genome version
   + getGEOInfo extract the information by genome version query
   + downloadGEObedFiles download all bed files of a particular genome version
   + downloadGSMbedFiles download the bed files of the input GSM list.

CHANGES IN VERSION 1.1.4
------------------------
 o in the annotation column of output of annotatePeak function, 
	if Exon/Intron, the output change to 'Transcript_Name/GeneID, Exon no. of total_no.' <2014-05-14, Wed>

CHANGES IN VERSION 1.1.3
------------------------
 o bug fixed when metadata(TranscriptDb) contained NA <2014-04-30, Wed>