@@ -1,6 +1,7 @@
 CHANGES IN VERSION 1.1.8
 ------------------------
  o bug fixed when peak overlap with feature <2014-06-11, Wed>
+ o optimize for getting overlap features of peaks <2014-06-11, Wed>
 
 CHANGES IN VERSION 1.1.7
 ------------------------
